--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="williammatkee@gmail.com">williammatkee@gmail.com</a>
+											<a href="williammattkee@gmail.com">williammattkee@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
