--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<a href="#" class="image"><img src="images/sql_project.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Coffee Shop SQL Database</h2>
+									<p>SQL Database for coffee shops, employees, and suppliers</p>
+									<ul class="actions">
+										<li><a href="https://github.com/willmkee/Coffee-Database" class="button">CHECK IT OUT</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 						<!--<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
