--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
 							<p>Software Developer based in Sacramento, CA</p>
 						</div>
 					</section>
-
+				<!--One-->
+					<section id="two" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="images/Java Inventory.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Inventory Management System</h2>
+									<p>Java program. Inventory Management System that allows user to add and modify parts and products.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/willmkee/Inventory-Application" class="button">CHECK IT OUT</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/sql_project.png" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Coffee Shop SQL Database</h2>
+									<p>SQL Database for coffee shops, employees, and suppliers</p>
+									<ul class="actions">
+										<li><a href="https://github.com/willmkee/Coffee-Database" class="button">CHECK IT OUT</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
