--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 							<p>Software Developer based in Sacramento, CA</p>
 						</div>
 					</section>
-				<!--One-->
+				<!--Java Inventory Project-->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/Java Inventory.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/java-inventory.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Inventory Management System</h2>
