--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/sql_project.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Scheduling.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Coffee Shop SQL Database</h2>
-									<p>SQL Database for coffee shops, employees, and suppliers</p>
+									<h2>Scheduling</h2>
+									<p>Java application to schedule appointments. Connects to SQL database. Includes functionality to add, update, and delete customers and appointments.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/willmkee/Coffee-Database" class="button">CHECK IT OUT</a></li>
+										<li><a href="https://github.com/willmkee/Scheduling-Application" class="button">CHECK IT OUT</a></li>
 									</ul>
 								</div>
 							</div>
