--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/student-roster-parser.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/student-roster-parser.png" alt="" data-position="center center" width = 400px height = 400px /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Student Roster Parser</h2>
