--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
 								</div>
 							</div>
 						</section>
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/roster-parser.png" alt="" data-position="center center"/></a>
 							<div class="content">
@@ -77,6 +75,10 @@
 								</div>
 							</div>
 						</section>
+				</section>
+				<!-- One -->
+					<!--<section id="one" class="wrapper style2 spotlights"> -->
+						
 						
 						<!--<section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
