--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Projects</a></li>
+							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
